--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(images/user1.png);
+    background-image: url(images/background.png);
     background-size: cover;
     background-position:center;
     box-shadow: 0 0 20px 10px rgba(255, 255, 255, 0.7); 
